@@ -260,9 +260,15 @@ TCPEventCode TCPConnection::processSegment1stThru8th(TCPSegment *tcpseg)
     }
 
     uint32 old_snd_nxt = state->snd_nxt; // later we'll need to see if snd_nxt changed
+    // Note: If one of the last data segments is lost while already in LAST-ACK state (e.g. if using TCPEchoApps)
+    // TCP must be able to process acceptable acknowledgments, however please note RFC 793, page 73:
+	// "LAST-ACK STATE
+    //    The only thing that can arrive in this state is an
+    //    acknowledgment of our FIN.  If our FIN is now acknowledged,
+    //    delete the TCB, enter the CLOSED state, and return."
     if (fsm.getState()==TCP_S_SYN_RCVD || fsm.getState()==TCP_S_ESTABLISHED ||
         fsm.getState()==TCP_S_FIN_WAIT_1 || fsm.getState()==TCP_S_FIN_WAIT_2 ||
-        fsm.getState()==TCP_S_CLOSE_WAIT || fsm.getState()==TCP_S_CLOSING)
+        fsm.getState()==TCP_S_CLOSE_WAIT || fsm.getState()==TCP_S_CLOSING || fsm.getState()==TCP_S_LAST_ACK)
     {
         //
         // ESTABLISHED processing:
@@ -425,6 +431,15 @@ TCPEventCode TCPConnection::processSegment1stThru8th(TCPSegment *tcpseg)
             uint32 old_rcv_nxt = state->rcv_nxt;
             state->rcv_nxt = receiveQueue->insertBytesFromSegment(tcpseg);
 
+            if (seqGreater(state->snd_una, old_snd_una))
+            {
+                // notify
+                tcpAlgorithm->receivedDataAck(old_snd_una);
+
+                // in the receivedDataAck we need the old value
+                state->dupacks = 0;
+            }
+
             // out-of-order segment?
             if (old_rcv_nxt==state->rcv_nxt)
             {
@@ -494,15 +509,6 @@ TCPEventCode TCPConnection::processSegment1stThru8th(TCPSegment *tcpseg)
                     }
                     sendIndicationToApp(TCP_I_PEER_CLOSED);
                 }
-
-				if (seqGreater(state->snd_una, old_snd_una))
-				{
-					// notify
-					tcpAlgorithm->receivedDataAck(old_snd_una);
-
-					// in the receivedDataAck we need the old value
-					state->dupacks = 0;
-				}
             }
         }
     }
